# fitch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
src/: app.rs  fitch.rs  main.rs  parser.rs  state.rs  ui.rs
