[package]
name = "fitch"
version = "0.0.1"
authors = ["Mroik <mroik@delayed.space>"]
description = "This is an implementation of a proof assistant using the fitch notation"
readme = "README.md"
repository = "https://github.com/Mroik/fitch"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.2"
